# lazy-config

./: BADGE_SETUP.md  DOCUMENTATION_FIXES.md  README.md  TEST_SUITE_ASSESSMENT.md  pyproject.toml
.github/workflows/: ci.yml  coverage-pages.yml
docs/: .gitignore  architecture.rst  conf.py  index.rst  quickstart.rst
docs/api/: modules.rst
docs/examples/: basic.rst  dual_axis.rst  index.rst  ui.rst
examples/: config.py
src/hieraconf/: __init__.py  cache_warming.py  config.py  context_manager.py  dual_axis_resolver.py  global_config.py  lazy_factory.py  placeholder.py
src/lazy_config/: cache_warming.py  lazy_factory.py  placeholder.py
tests/: __init__.py  conftest.py  test_auto_decorator_field_injection.py  test_auto_decorator_flow.py  test_auto_decorator_flow.py.bak  test_auto_decorator_flow_integration.py  test_cache_warming.py  test_config.py  test_context_manager.py  test_context_manager_extended.py  test_dual_axis_resolver.py  test_dual_axis_resolver_extended.py  test_ensure_global_config_context.py  test_global_config.py  test_inherit_as_none.py  test_integration.py  test_lazy_factory.py  test_nested_dataclass_auto_lazification.py  test_pipeline_execution_flow.py  test_placeholder.py  test_placeholder_extended.py  test_ui_hidden.py
tests/fixtures/: fixture_decorator_flow.py  fixture_decorator_flow_clean.py  fixture_step_decorator.py  fixture_step_decorator_clean.py  simple_decorator_config.py
